[project]
name = "chromium-commits-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server that provides latest commit information for files in the Chromium repository"
authors = [
    {name = "hydavinci"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["mcp", "chromium", "commits", "git", "api", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Version Control :: Git"
]
dependencies = [
    "requests>=2.31.0",
    "mcp>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/hydavinci/chromium-commits"
Repository = "https://github.com/hydavinci/chromium-commits"
Issues = "https://github.com/hydavinci/chromium-commits/issues"

[project.scripts]
chromium-commits = "src.server:main"